# GGVTS

./: Compare_Response.c  Compare_Response.h  MY-NW-PROJ.uvopt  MY-NW-PROJ.uvproj  common.h  debug.c  debug.h  delay.c  functionality.c  functionality.h  global_data.h  gps.h  gsm.c  gsm.h  launchGUI  main.c  timer.c  timer.h  uart.h
Bulb_Manipulation/: Bulb_Manipulation.uvopt  common.h  global_data.h  main.c  register_names.h
Bulb_Manipulation(8051)/: Bulb Manipulation(89c51).docx  Bulb_Manipulation.uvgui.rhnar  Bulb_Manipulation.uvproj  datatypes.h  global_data.h  main.c  register_names.h
Checklists/: HLR_review_checklist.xlsx  (+2 more)
GGVTSPico/: CMakeLists.txt
GGVTSPico/Requirements/SRS/: SRS002.yml  SRS004.yml  SRS005.yml  SRS007.yml  SRS008.yml  SRS011.yml  SRS012.yml  SRS013.yml  SRS017.yml  SRS019.yml  SRS020.yml  SRS022.yml  SRS024.yml  SRS029.yml  SRS030.yml  SRS033.yml  SRS034.yml  SRS035.yml  SRS037.yml  SRS039.yml  SRS040.yml  SRS041.yml  SRS042.yml  SRS043.yml  SRS046.yml  SRS051.yml  SRS052.yml  SRS056.yml  SRS057.yml  SRS063.yml  SRS065.yml  SRS066.yml  SRS068.yml  SRS129.yml  SRS131.yml  SRS132.yml  SRS134.yml  SRS137.yml  SRS142.yml  SRS151.yml  (+6 more)
GGVTSPico/Requirements/exports/: prm.xlsx
GGVTSPico/Requirements/public/: traceability.csv
GGVTSPico/src/: CMakeLists.txt  GGVTS.c  authenticator.c  authenticator.h  common.h  functionality.c  functionality.h  globalConsts.h  globaldata.h  gps.c  gps.h  gsm.c  gsm.h  ledFunctionality.c  ledFunctionality.h  response.c  response.h  stringoperations.c  stringoperations.h  timer.c  timer.h  uartInit.c  uartInit.h
(+445 files in other folders)
